<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutUserData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_mail"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewNrc"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nrc"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewDob"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d_o_b"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
