<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_light"
        android:layout_margin="5dp"
        android:weightSum="7">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_mail"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nrc"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d_o_b"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"/>

</LinearLayout>