<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/editTextNrc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nrc"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/editTextDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/d_o_b"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableRight="@drawable/calendar"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"/>

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

</LinearLayout>